# torch-nn

./: CMakeLists.txt  LocalResponseNormalization.lua  Normalize.lua  README.md  SpatialAdaptiveMaxPooling.c  SpatialAdaptiveMaxPooling.cu  SpatialAdaptiveMaxPooling.lua  SpatialAdaptiveMaxPoolingComplete.lua  SpatialAdaptiveMaxPoolingFloat.lua  SpatialAdaptivePooling.lua  SpatialConvolutionGroups.lua  SpatialPyramidPooling.lua  TopK.lua  test.lua
ConvLua/: ConvLua.lua  Makefile  im2col.c  test.lua
sse_optim/: CMakeLists.txt  README.md  sse.c  sse.lua  test.lua
