CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

#ADD_SUBDIRECTORY(sse_optim)

FIND_PACKAGE(Torch)

ADD_DEFINITIONS(-std=gnu99 -fPIC -fopenmp -O3 -ffast-math)

IF(DEFINED Torch_INSTALL_INCLUDE)
  SET(TH_INSTALL_INCLUDE ${Torch_INSTALL_INCLUDE})
  SET(TH_INSTALL_LIB ${Torch_INSTALL_LIB})
ENDIF()

INCLUDE_DIRECTORIES(
  ${TH_INSTALL_INCLUDE}/TH
  ${TH_INSTALL_INCLUDE}
)

LINK_DIRECTORIES(${TH_INSTALL_LIB}})
ADD_LIBRARY(sse_optim_static STATIC sseAdd.c)
ADD_LIBRARY(sse_optim SHARED sseAdd.c)

#ADD_EXECUTABLE(test_networks src/test.cpp)

TARGET_LINK_LIBRARIES(sse_optim_static TH)
TARGET_LINK_LIBRARIES(sse_optim TH)
